Fixes footer year spacing

--- a/themes/supersimple/assets/styles/footer.scss
+++ b/themes/supersimple/assets/styles/footer.scss
@@ -123,7 +123,7 @@ footer {
                 }
 
                 .footer-year {
-                    margin-top: unset;
+                    margin-top: 0;
                 }
             }
         }
